[tool.poetry]
name = "panorama"
version = "0.2.3"
description = ""
authors = ["Thomas Brockmeier <t.brockmeier@amsterdam.nl>"]

[tool.poetry.dependencies]
python = "~3.9"
httpx = {version = "^0.23.0", source = "PyPI"}
pydantic = {version = "^1.8.2", source = "PyPI"}

[tool.poetry.dev-dependencies]
pytest = {version = "^7.2.0", source = "PyPI"}
vcrpy = {version = "^4.1.1", source = "PyPI"}
black = {version = "^22.10", source = "PyPI"}
mypy = {version = "^0.910", source = "PyPI"}
isort = {version = "^5.9.3", source = "PyPI"}
pylint = {version = "^2.11.1", source = "PyPI"}
pytest-cov = {version = "^2.12.1", source = "PyPI"}
pytest-asyncio = {version = "^0.15.1", source = "PyPI"}
pytest-vcr = {version = "^1.0.2", source = "PyPI"}
haversine = {version = "^2.5.1", source = "PyPI"}
Sphinx = {version = "^4.2.0", source = "PyPI"}
typing-extensions = {version = "^4.4", source = "PyPI"}
pre-commit = {version = "^3.1.1", source = "PyPI"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
